# waypoints

./: .challenge.md  .dockerignore  .gitignore  DECISIONS.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.docker/app/: Dockerfile  prod.env
backend/: app.py  config.py  db.py  routes.py  schemas.py
be/: app.py  config.py  db.py  routes.py  schemas.py
fe/: package-lock.json  package.json
fe/src/: App.vue  main.js
fe/src/components/: WaypointForm.vue  WaypointList.vue
frontend/: package-lock.json
frontend/public/: index.html
frontend/src/: App.vue  main.js
frontend/src/components/: WaypointForm.vue
frontend/src/scripts/: api.js  util.js
scripts/: build_backend.sh  build_frontend.sh  dev.sh  vue.config.js.prod  waypoint-server.sh
tests/: locustfile.py  test_app.py  test_schemas.py
