[tool.poetry]
name = "be"
version = "0.1.0"
description = "Solution to the Planet Waypoint Take-Home Challenge"
authors = ["Christoph Koch <hello@chris-k.at>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.2"
aiofiles = "^0.7.0"
Jinja2 = "^3.0.1"
SQLAlchemy = "^1.4.20"
psycopg2-binary = "^2.9.1"
uvicorn = {extras = ["standard"], version = "^0.14.0"}
gunicorn = "^20.1.0"
asyncpg = "^0.23.0"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
flake8 = "^3.9.2"
isort = "^5.9.1"
locust = "^1.6.0"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
